--- a/index.html
+++ b/index.html
@@ -19,15 +19,37 @@
 <link rel="stylesheet" href="" media="screen" title="">
 <link rel="stylesheet" href="" media="print" title="">
 
-<!-- style -->
+<!-- style: light theme -->
 <style>
 a {
-	color: #0000ff;
+  color: #0000ff;
 }
 pre {
 	max-width: 80ch;
 	white-space: pre-wrap;
 }
+</style>
+
+<!-- style: dark theme -->
+<style>
+/*
+a {
+  color: #56b6c2;
+}
+body {
+  font-family: "Consolas", monospace;
+  font-size: 0.9rem;
+  color: #abb2b2;
+  background-color: #282c34;
+}
+pre {
+	max-width: 80ch;
+	white-space: pre-wrap;
+}
+strong {
+  color: #d19a66;
+}
+*/
 </style>
 
 </head>
@@ -36,18 +58,35 @@ pre {
 
 <!-- pre -->
 <pre>
-Kenneth Forsbäck &#60;domain&#62;
+Kenneth Forsbäck &#60;<a href="">domain</a>&#62;
 
-(A work in progress based on project lists, on last modified times of project files, references files, and media files, on YouTube history, and on archived web pages. A whole bunch of designs and unfinished stuff that make up the first 40 years of my life, the next 40 years will go to developing these designs.)
+NOTES:
+
+A work in progress based on project lists, on last modified times of project files, references files, and media files, on YouTube history, and on archived web pages. A whole bunch of designs and unfinished stuff that make up the first 40 years of my life, the next 40 years will go to developing these designs.
+
+My accounts and my online presence has been an utter mess and I'm slowly sorting it out, hopefully for more inner peace. I've been dealing with a lot and organising my online presence is going to be my zen. A domain is in the works which is going to sort out a whole lot and make my life easier.
+
+Regarding my gaming accounts, I might play like $%@! in some games, but I play for fun and lean toward solo or co-operative; mostly first-person shooters but also a lot of roleplaying.
+
+Pardon my old-school monospaced site while I try to get my life back on track, try to document my many projects and my efforts over the years, and just try to reclaim my serenity and path in life.
 
 <strong>ARTS</strong>
-<hr/>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+--------------------------------------------------------------------------------
+
+<strong>(1991-1992)</strong>
+  I came across a handheld brick game fairly early in my life, my first real foray into video games and gaming outside of cards or board games.
+<strong>(1992-1994)</strong>
+  I was first introduced to the NES at my cousin and later the Atari 2600 at a friend, both in the early 90s, both of which helped me embrace gaming and were my first introduction to consoles.
+<strong>200106</strong>
+  I had been slowly immersing myself in PC gaming ever since Ski or Die on DOS, familiarising myself with computers, with DOS, and slowly moving to Windows 95 and onward, finding more complicated and more immersive games in different styles. Ski or Die was the first real game I immersed myself in at school, and Doom became the great turning point in my life, making sure I was to be a gamer until I was old and grey.
+<strong>200106</strong>
+  A first-person shooter designed around weapons with customisation and attachments inspired by Firearms (Half-Life) (1998).
 
 <strong>SCIENCE</strong>
-<hr/>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+--------------------------------------------------------------------------------
 
+<strong>200212</strong>
+  A gaming network with online multiplayer and discussion boards inspired by Quake (1996) and Planet Quake.
 <strong>200403</strong>
   An extension programming language inspired by Lua.
 <strong>200410</strong>
@@ -55,6 +94,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 <strong>200512</strong>
   A file system layout inspired by Filesystem Hierarchy Standard.
 <strong>200602</strong>
+COMMENT:
   I enrolled at VAMK in 2004 in the hopes of ultimately working with microprocessors and instruction set architectures, but my studies suffered greatly the first year (2004-2005) due to mental health problems and by the second year (2005-2006) I was no longer in attendance. As such my dreams of working as an engineer in my field of ambition were shattered, but I intuitively started learning and designing systems on my own.
   With my personality (INFP) I had been self-driven since childhood and I quickly found solace in my work, able to bear the depression and anxiety that weighed heavily on my spirit and slowly managed to work up motivation.
   Despite growing up on the x86 architecture and AMD being my processor of choice since K6, I found an interest in older processors such as Z80, 6800, 6502, and ended up falling in love with MIPS and ARM, envisioning them as future desktop architectures.
@@ -94,42 +134,54 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
    A functional programming language inspired by Lisp.
 
 <strong>HERITAGE</strong>
-<hr/>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+--------------------------------------------------------------------------------
 
 <strong>(1993)</strong>
+COMMENT:
   I was intrigued when we explored Nordic mythology and the Edda in primary school, already somewhat familiar with the lore from reading Valhalla by Peter Madsen. The stories stirred the imaginative mind of a child and our Nordic gods seemed like superheroes going on amazing adventures and dwelling in the world tree.
   The last part of that course material also stuck in my mind, with the end of the world and of Ask and Embla born out of the tree. Later in life I have come to understand that we still bear traces of this in our language, old figurative words for man and woman being "tain" and "tjalg", both meaning branch or twig.
   I was too young to care for it more than as stories and fables similar to the comics I was reading, but some of those memories have stuck with me ever since.
   While it scared me as a child, as an adult I have also come to appreciate how my grandfather used to scare me with the trolls of the well and the forest, and the small stories of their mischief.
 <strong>(1996)</strong>
-  I grew up in Ostrobothnia with my patrilineal heritage being North Germanic (Ostrobothnia) and my matrilineal Finnic (Rauma), with my Ostrobothnian heritage being primary and what I bear foremost.
+COMMENT:
+  I grew up in Ostrobothnia with my patrilineal heritage being North Germanic (Österbotten) and my matrilineal Finnic (Satakunta), with my Ostrobothnian heritage being primary and what I bear foremost.
   While standard Finland Swedish is what we learn in school, our language having no standardisation, no formal recognition, and no teaching material, it is not my native language and not what I use outside of writing.
   Several colloquial writing systems exist for our language, but even then there is no standardisation and the language can vary moderately between speakers, as such many resort to writing in Finland Swedish and code switching from and to our native language.
   Despite not being tought in school we did discuss our so called dialect and how it differed from Finland Swedish, and that it is a richness that we should hold on to. It was in primary school (fifth grade) were I began to truly wonder why our language was different from Finland Swedish in so many ways, in pronunciation, grammar, and vocabulary, and why we couldn't study it in school.
 <strong>200206</strong>
-  I started working with constructed languages due to being inspired by Might and Magic 8 and other games to make my own worlds and languages.
+COMMENT:
+  I began working with constructed languages due to being inspired by Might and Magic 8 and other games to make my own worlds and languages.
 <strong>200305</strong>
-  I started working with constructed languages in 2002, wanting to make my roleplaying fantasy worlds more immersive, and I decided to use my native language and Finnish as inspiration. I eventually become curious as to why our language was they way it was, rekindling an old thought, and moved from constructed languages to linguistics.
+COMMENT:
+  I began working with constructed languages in 2002, wanting to make my roleplaying fantasy worlds more immersive, and I decided to use my native language and Finnish as inspiration. I eventually become curious as to why our language was they way it was, rekindling an old thought, and moved from constructed languages to linguistics.
 <strong>200501</strong>
+COMMENT:
   I attended my grandfather's burial as he had recently died and a small piece of me sprouted from the seed that might have been planted already when I was a child. At the graveyard the priest talked to me and asked me how I was feeling, unknowing that I had been dealing with mental unhealth since long before this and my grandfather's death was not the reason for my apparent mood.
   It was still too early, I was not yet ready, but I ended up mentioning that I would have wanted to pour a cup of ale for my grandfather, that I didn't feel comfortable with the wake.
 <strong>201112</strong>
+COMMENT:
   I had been working with my native language long enough, going so far as to immerse myself in Old Norse, Proto-Germanic, and Proto-Indo-European, trying to determine the development of our language and slowly beginning to realise that it might not be just a Swedish dialect as conventionally classified.
   As such my intentions for standardisation, regulation, and formal recognition in Finland began to slowly grow, and I also found it relevant to try and classify our language and its relatives.
 <strong>201202</strong>
-  I started working on my own standardisation of writing, having used the colloquial systems before this.
+COMMENT:
+  I began working on my own standardisation of writing, having used the colloquial systems before this.
 <strong>201203</strong>
-  I started planning for formal recognition (and our inclusion in the national census) in the future and for regulation of our language, for a council, institute, or association to help protect and promote our language in our native region.
+COMMENT:
+  I began planning for formal recognition (and our inclusion in the national census) in the future and for regulation of our language, for a council, institute, or association to help protect and promote our language in our native region.
 <strong>201202</strong>
+COMMENT:
   I rediscovered Nordic and Finno-Samic mythology and rekindled an old interest, looking for inspiration in what I should write to showcase my language and standardised writing, and it didn't take long before the smouldering embers began to burn after lying dormant.
 <strong>201407</strong>
+COMMENT:
   I had gone through several changes in life and several self-discoveries, slowly leading up to a turning point, and slowly able to shed the pain and weight I carried for almost 15 years.
   This time around there was no uncertainty and I knew I was to be heathen, to one way or another embrace the old ways, and to find my strength and serenity. Along with several other factors I turned my life around in 2015, ready to look forward to a beautiful future where I was no longer held back by past experiences.
   I had found myself, seeing my life since the 90s before me and knowing why it had been the way it had, what path I needed to walk and what to look for.
 <strong>201607</strong>
+COMMENT:
   I began planning for how to register and maintain a religious association once the time was right and I have a working standardisation and its material, a charter ("perustamiskirja") and the bylaws ("yhdyskuntajärjestys"). That way I can have my worship formally recognised and registered in the national census.
   If you want to change the world for the better, then help just one person, grant them strength and hope, stoke their embers and wake their heart; if I can help just one person find their sigh of relief then I've done enough.
+<strong>201901</strong>
+  A classification of all North Germanic languages based on phonological data.
 </pre>
 
 </body>
