--- a/index.html
+++ b/index.html
@@ -74,10 +74,13 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 --------------------------------------------------------------------------------
 
 <strong>(1991-1992)</strong>
+COMMENT:
   I came across a handheld brick game fairly early in my life, my first real foray into video games and gaming outside of cards or board games.
 <strong>(1992-1994)</strong>
+COMMENT:
   I was first introduced to the NES at my cousin and later the Atari 2600 at a friend, both in the early 90s, both of which helped me embrace gaming and were my first introduction to consoles.
 <strong>200106</strong>
+COMMENT:
   I had been slowly immersing myself in PC gaming ever since Ski or Die on DOS, familiarising myself with computers, with DOS, and slowly moving to Windows 95 and onward, finding more complicated and more immersive games in different styles. Ski or Die was the first real game I immersed myself in at school, and Doom became the great turning point in my life, making sure I was to be a gamer until I was old and grey.
 <strong>200106</strong>
   A first-person shooter designed around weapons with customisation and attachments inspired by Firearms (Half-Life) (1998).
