--- a/index.html
+++ b/index.html
@@ -168,12 +168,14 @@ COMMENT:
 <strong>201202</strong>
 COMMENT:
   I began working on my own standardisation of writing, having used the colloquial systems before this.
-<strong>201203</strong>
-COMMENT:
-  I began planning for formal recognition (and our inclusion in the national census) in the future and for regulation of our language, for a council, institute, or association to help protect and promote our language in our native region.
 <strong>201202</strong>
 COMMENT:
   I rediscovered Nordic and Finno-Samic mythology and rekindled an old interest, looking for inspiration in what I should write to showcase my language and standardised writing, and it didn't take long before the smouldering embers began to burn after lying dormant.
+<strong>201203</strong>
+COMMENT:
+  I began planning for formal recognition (and our inclusion in the national census) in the future and for regulation of our language, for a council, institute, or association to help protect and promote our language in our native region.
+<strong>201203</strong>
+  A language institute or association to preserve our language.
 <strong>201407</strong>
 COMMENT:
   I had gone through several changes in life and several self-discoveries, slowly leading up to a turning point, and slowly able to shed the pain and weight I carried for almost 15 years.
@@ -183,6 +185,8 @@ COMMENT:
 COMMENT:
   I began planning for how to register and maintain a religious association once the time was right and I have a working standardisation and its material, a charter ("perustamiskirja") and the bylaws ("yhdyskuntajärjestys"). That way I can have my worship formally recognised and registered in the national census.
   If you want to change the world for the better, then help just one person, grant them strength and hope, stoke their embers and wake their heart; if I can help just one person find their sigh of relief then I've done enough.
+<strong>201611</strong>
+  A private company to provide online services in our native language.
 <strong>201901</strong>
   A classification of all North Germanic languages based on phonological data.
 </pre>
