--- a/index.html
+++ b/index.html
@@ -73,12 +73,18 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 <strong>ARTS</strong>
 --------------------------------------------------------------------------------
 
-<strong>[LIST]</strong>
+[LIST]
 
 <strong>200106</strong>
   A first-person shooter designed around weapons with customisation and attachments inspired by Firearms (Half-Life) (1998).
+<strong>201406</strong>
+  A system for software rendering and resolution scaling, using texture streaming and using static or dynamic adjustment of resolution, inspired by Irrlicht and GPU scaling.
+<strong>201508</strong>
+  A system for software rendering using integer algorithms.
+<strong>201603</strong>
+  A system for benchmarking software rendering and integer performance, in order to scale algorithms and settings to performance, inspired by WinSAT.
 
-<strong>[NOTES]</strong>
+[NOTES]
 
 <strong>(1991-1992)</strong>
   I came across a handheld brick game fairly early in my life, my first real foray into video games and gaming outside of cards or board games.
@@ -90,7 +96,7 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 <strong>SCIENCE</strong>
 --------------------------------------------------------------------------------
 
-<strong>[LIST]</strong>
+[LIST]
 
 <strong>200212</strong>
   A gaming network with online multiplayer and discussion boards inspired by Quake (1996) and Planet Quake.
@@ -135,7 +141,7 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 <strong>201201</strong>
    A functional programming language inspired by Lisp.
 
-<strong>[NOTES]</strong>
+[NOTES]
 
 <strong>200602</strong>
   I enrolled at VAMK in 2004 in the hopes of ultimately working with microprocessors and instruction set architectures, but my studies suffered greatly the first year (2004-2005) due to mental health problems and by the second year (2005-2006) I was no longer in attendance. As such my dreams of working as an engineer in my field of ambition were shattered, but I intuitively started learning and designing systems on my own.
@@ -145,7 +151,7 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 <strong>HERITAGE</strong>
 --------------------------------------------------------------------------------
 
-<strong>[LIST]</strong>
+[LIST]
 
 <strong>200305</strong>
   A serious effort to study and research our native language.
@@ -156,7 +162,7 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 <strong>201901</strong>
   A classification of all North Germanic languages based on phonological data.
 
-<strong>[NOTES]</strong>
+[NOTES]
 
 <strong>(1993)</strong>
   I was intrigued when we explored Nordic mythology and the Edda in primary school, already somewhat familiar with the lore from reading Valhalla by Peter Madsen. The stories stirred the imaginative mind of a child and our Nordic gods seemed like superheroes going on amazing adventures and dwelling in the world tree.
