--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ strong {
 <pre>
 Kenneth Forsbäck &#60;<a href="">domain</a>&#62;
 
-<strong>[NOTES]</strong>
+[NOTES]
 
 A work in progress based on project lists, on last modified times of project files, references files, and media files, on YouTube history, and on archived web pages. A whole bunch of designs and unfinished stuff that make up the first 40 years of my life, the next 40 years will go to developing these designs.
 
@@ -69,6 +69,16 @@ My accounts and my online presence has been an utter mess and I'm slowly sorting
 Regarding my gaming accounts, I might play like $%@! in some games, but I play for fun and lean toward solo or co-operative; mostly first-person shooters but also a lot of roleplaying.
 
 Pardon my old-school monospaced site while I try to get my life back on track, try to document my many projects and my efforts over the years, and just try to reclaim my serenity and path in life.
+
+[NOTES]
+
+divide entries into
+  background, notes, timeline
+  context
+  culture
+  reference
+  system
+  theory
 
 <strong>ARTS</strong>
 --------------------------------------------------------------------------------
@@ -84,7 +94,7 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 <strong>201603</strong>
   A system for benchmarking software rendering and integer performance, in order to scale algorithms and settings to performance, inspired by WinSAT.
 
-[NOTES]
+[BACKGROUND]
 
 <strong>(1991-1992)</strong>
   I came across a handheld brick game fairly early in my life, my first real foray into video games and gaming outside of cards or board games.
@@ -112,6 +122,8 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
   A 16-bit RISC architecture inspired by ARM7TDMI (Thumb) and Z80.
 <strong>200602</strong>
   A system for explicit cache management inspired by ARM7TDMI and 6800, allowing for precise control over data flow with separate instructions that guide the processor as to which memory sections are needed. Later expanded by the concept of immediate memory for multiple levels of explicitly managed memory.
+<strong>200608</strong>
+  An emulator (or set of emulator libraries) for my architecture designs.
 <strong>200611</strong>
   A firmware environment for managing and loading system environments (firmware applications and/or operating systems) inspired by BIOS and coreboot.
 <strong>200611</strong>
@@ -141,7 +153,7 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 <strong>201201</strong>
    A functional programming language inspired by Lisp.
 
-[NOTES]
+[BACKGROUND]
 
 <strong>200602</strong>
   I enrolled at VAMK in 2004 in the hopes of ultimately working with microprocessors and instruction set architectures, but my studies suffered greatly the first year (2004-2005) due to mental health problems and by the second year (2005-2006) I was no longer in attendance. As such my dreams of working as an engineer in my field of ambition were shattered, but I intuitively started learning and designing systems on my own.
@@ -162,7 +174,7 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 <strong>201901</strong>
   A classification of all North Germanic languages based on phonological data.
 
-[NOTES]
+[BACKGROUND]
 
 <strong>(1993)</strong>
   I was intrigued when we explored Nordic mythology and the Edda in primary school, already somewhat familiar with the lore from reading Valhalla by Peter Madsen. The stories stirred the imaginative mind of a child and our Nordic gods seemed like superheroes going on amazing adventures and dwelling in the world tree.
