--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 
 <strong>200106</strong>
   A first-person shooter designed around weapons with customisation and attachments inspired by Firearms (Half-Life) (1998).
+<strong>200402</strong>
+  A first-person space simulator, focused on exploration and combat and with seamless travel from surface to space and between planets, inspired by Freelancer (2003).
+<strong>200602</strong>
+  A first-person space simulator, focused on various careers in space and running your own company or faction, inspired by Freelancer (2003), Planetes (2003), and EVE Online (2003).
 <strong>201406</strong>
   A system for software rendering and resolution scaling, using texture streaming and using static or dynamic adjustment of resolution, inspired by Irrlicht and GPU scaling.
 <strong>201508</strong>
