--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 <strong>ARTS</strong>
 --------------------------------------------------------------------------------
 
+<em>games, computer, tabletop, athletic, stories, writing, drawing</em>
+
 [LIST]
 
 <strong>200106</strong>
@@ -99,6 +101,8 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 
 <strong>SCIENCE</strong>
 --------------------------------------------------------------------------------
+
+<em>computing, information, networking, communication</em>
 
 [LIST]
 
@@ -156,6 +160,8 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 
 <strong>HERITAGE</strong>
 --------------------------------------------------------------------------------
+
+<em>culture, language, worship</em>
 
 [LIST]
 
