--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 <strong>201607</strong>
   I began planning for how to register and maintain a religious association once the time was right and I have a working standardisation and its material, a charter ("perustamiskirja") and the bylaws ("yhdyskuntajärjestys"). That way I can have my worship formally recognised and registered in the national census.
   If you want to change the world for the better, then help just one person, grant them strength and hope, stoke their embers and wake their heart; if I can help just one person find their sigh of relief then I've done enough.
+<strong>201610</strong>
+  I began contemplating the status and circumstance of our language according to the UNESCO's "Language vitality and endangerment" and "Atlas of the World's Languages in Danger".
 </pre>
 
 </body>
