--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
   I was first introduced to the NES at my cousin and later the Atari 2600 at a friend, both in the early 90s, both of which helped me embrace gaming and were my first introduction to consoles.
 <strong>200106</strong>
   I had been slowly immersing myself in PC gaming ever since Ski or Die on DOS, familiarising myself with computers, with DOS, and slowly moving to Windows 95 and onward, finding more complicated and more immersive games in different styles. Ski or Die was the first real game I immersed myself in at school, and Doom became the great turning point in my life, making sure I was to be a gamer until I was old and grey.
+<strong>(2010-2011)</strong>
+  An old hard drive that broke during the second incident around 2010-2011 contains projects files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
+  Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
 
 <strong>SCIENCE</strong>
 --------------------------------------------------------------------------------
@@ -157,6 +160,9 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
   I enrolled at VAMK in 2004 in the hopes of ultimately working with microprocessors and instruction set architectures, but my studies suffered greatly the first year (2004-2005) due to mental health problems and by the second year (2005-2006) I was no longer in attendance. As such my dreams of working as an engineer in my field of ambition were shattered, but I intuitively started learning and designing systems on my own.
   With my personality (INFP) I had been self-driven since childhood and I quickly found solace in my work, able to bear the depression and anxiety that weighed heavily on my spirit and slowly managed to work up motivation.
   Despite growing up on the x86 architecture and AMD being my processor of choice since K6, I found an interest in older processors such as Z80, 6800, 6502, and ended up falling in love with MIPS and ARM, envisioning them as future desktop architectures.
+<strong>(2010-2011)</strong>
+  An old hard drive that broke during the second incident around 2010-2011 contains projects files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
+  Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
 
 <strong>HERITAGE</strong>
 --------------------------------------------------------------------------------
