--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 <strong>(2010-2011)</strong>
   An old hard drive that broke during the second incident around 2010-2011 contains projects files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
   Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
+  I think it was a Western Digital My Book Essential 1 TB USB 2.0 containing a Samsung hard drive.
 
 <strong>SCIENCE</strong>
 --------------------------------------------------------------------------------
@@ -163,6 +164,7 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 <strong>(2010-2011)</strong>
   An old hard drive that broke during the second incident around 2010-2011 contains projects files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
   Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
+  I think it was a Western Digital My Book Essential 1 TB USB 2.0 containing a Samsung hard drive.
 
 <strong>HERITAGE</strong>
 --------------------------------------------------------------------------------
