--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 <strong>200106</strong>
   I had been slowly immersing myself in PC gaming ever since Ski or Die on DOS, familiarising myself with computers, with DOS, and slowly moving to Windows 95 and onward, finding more complicated and more immersive games in different styles. Ski or Die was the first real game I immersed myself in at school, and Doom became the great turning point in my life, making sure I was to be a gamer until I was old and grey.
 <strong>(2010-2011)</strong>
-  An old hard drive that broke during the second incident around 2010-2011 contains projects files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
+  An old hard drive that broke during the second incident around 2010-2011 contains project files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
   Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
-  I think it was a Western Digital My Book Essential 1 TB USB 2.0 containing a Samsung hard drive.
+  I think it was a Western Digital My Book Essential 1 TB USB 2.0 containing a Samsung hard drive, I don't think I was using Buffalo external drives at that point in time.
 
 <strong>SCIENCE</strong>
 --------------------------------------------------------------------------------
@@ -162,9 +162,9 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
   With my personality (INFP) I had been self-driven since childhood and I quickly found solace in my work, able to bear the depression and anxiety that weighed heavily on my spirit and slowly managed to work up motivation.
   Despite growing up on the x86 architecture and AMD being my processor of choice since K6, I found an interest in older processors such as Z80, 6800, 6502, and ended up falling in love with MIPS and ARM, envisioning them as future desktop architectures.
 <strong>(2010-2011)</strong>
-  An old hard drive that broke during the second incident around 2010-2011 contains projects files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
+  An old hard drive that broke during the second incident around 2010-2011 contains project files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
   Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
-  I think it was a Western Digital My Book Essential 1 TB USB 2.0 containing a Samsung hard drive.
+  I think it was a Western Digital My Book Essential 1 TB USB 2.0 containing a Samsung hard drive, I don't think I was using Buffalo external drives at that point in time.
 
 <strong>HERITAGE</strong>
 --------------------------------------------------------------------------------
