--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@ Regarding my gaming accounts, I might play like $%@! in some games, but I play f
 
 Pardon my old-school monospaced site while I try to get my life back on track, try to document my many projects and my efforts over the years, and just try to reclaim my serenity and path in life.
 
+I have lived (pretty much) my whole life on welfare, not by choice, and could have had a pretty decent life if it weren't for a few incidents in my life and certain destructive people (no, I'm not "progressive"). Ever since I was 16 years old and suffered something unfortunate I have waited for and attempted to build for a contentful life where I could actually support myself.
+
+Not end up on Fortune 500, or whatever it's called, but to support myself; preferrably while having fun, which is what my endeavours and my learning has been over the years, creative and trechnological.
+
 <strong>ARTS</strong>
 --------------------------------------------------------------------------------
 
@@ -90,7 +94,7 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 <strong>201603</strong>
   A system for benchmarking software rendering and integer performance, in order to scale algorithms and settings to performance, inspired by WinSAT.
 
-[BACKGROUND]
+[NOTES]
 
 <strong>(1991-1992)</strong>
   I came across a handheld brick game fairly early in my life, my first real foray into video games and gaming outside of cards or board games.
@@ -155,7 +159,7 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 <strong>201201</strong>
    A functional programming language inspired by Lisp.
 
-[BACKGROUND]
+[NOTES]
 
 <strong>200602</strong>
   I enrolled at VAMK in 2004 in the hopes of ultimately working with microprocessors and instruction set architectures, but my studies suffered greatly the first year (2004-2005) due to mental health problems and by the second year (2005-2006) I was no longer in attendance. As such my dreams of working as an engineer in my field of ambition were shattered, but I intuitively started learning and designing systems on my own.
@@ -182,7 +186,7 @@ Pardon my old-school monospaced site while I try to get my life back on track, t
 <strong>201901</strong>
   A classification of all North Germanic languages based on phonological data.
 
-[BACKGROUND]
+[NOTES]
 
 <strong>(1993)</strong>
   I was intrigued when we explored Nordic mythology and the Edda in primary school, already somewhat familiar with the lore from reading Valhalla by Peter Madsen. The stories stirred the imaginative mind of a child and our Nordic gods seemed like superheroes going on amazing adventures and dwelling in the world tree.
