index and files

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 <strong>200106</strong>
   I had been slowly immersing myself in PC gaming ever since Ski or Die on DOS, familiarising myself with computers, with DOS, and slowly moving to Windows 95 and onward, finding more complicated and more immersive games in different styles. Ski or Die was the first real game I immersed myself in at school, and Doom became the great turning point in my life, making sure I was to be a gamer until I was old and grey.
 <strong>(2010-2011)</strong>
-  An old hard drive that broke during the second incident around 2010-2011 contains project files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
+  I have an old hard drive that broke during the second incident around 2010-2011 contains project files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
   Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
   I think it was a Western Digital My Book Essential 1 TB USB 2.0 containing a Samsung hard drive, I don't think I was using Buffalo external drives at that point in time.
 
@@ -166,9 +166,15 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
   With my personality (INFP) I had been self-driven since childhood and I quickly found solace in my work, able to bear the depression and anxiety that weighed heavily on my spirit and slowly managed to work up motivation.
   Despite growing up on the x86 architecture and AMD being my processor of choice since K6, I found an interest in older processors such as Z80, 6800, 6502, and ended up falling in love with MIPS and ARM, envisioning them as future desktop architectures.
 <strong>(2010-2011)</strong>
-  An old hard drive that broke during the second incident around 2010-2011 contains project files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
+  I have an old hard drive that broke during the second incident around 2010-2011 contains project files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
   Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
   I think it was a Western Digital My Book Essential 1 TB USB 2.0 containing a Samsung hard drive, I don't think I was using Buffalo external drives at that point in time.
+<strong>201004</strong>
+  I stumbled across Steven Faber's web site and came to exchange some e-mails with him, wanting to learn ballistics. Before this I had attempted to use rather crude equations that worked as long as you guessed and tweaked the variables correctly, but I was interested in something more accurate.
+  - <a href="files/coppock_model.pdf">coppock_model.pdf</a>
+  - <a href="files/coppock_theory.pdf">coppock_theory.pdf</a>
+  - <a href="files/coppock_theory.jpg">coppock_theory.jpg</a>
+  - <a href="files/coppock_model.jpg">coppock_model.jpg</a>
 
 <strong>HERITAGE</strong>
 --------------------------------------------------------------------------------
