index and files

--- a/index.html
+++ b/index.html
@@ -169,12 +169,18 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
   I have an old hard drive that broke during the second incident around 2010-2011 contains project files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
   Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
   I think it was a Western Digital My Book Essential 1 TB USB 2.0 containing a Samsung hard drive, I don't think I was using Buffalo external drives at that point in time.
-<strong>201004</strong>
-  I stumbled across Steven Faber's web site and came to exchange some e-mails with him, wanting to learn ballistics. Before this I had attempted to use rather crude equations that worked as long as you guessed and tweaked the variables correctly, but I was interested in something more accurate.
-  - <a href="files/coppock_model.pdf">coppock_model.pdf</a>
+<strong>200812</strong>
+  I stumbled across Steven Faber's web site around 2008 and came to exchange some e-mails with him, wanting to learn ballistics. Before this I had attempted to use rather crude equations that worked as long as you guessed and tweaked the variables correctly, but I was interested in something more accurate.
+  He might also have been the one to recommend me McCoy's "bible" on ballistics which I later ended up buying on Amazon. While I lacked, and still lack, the mathematical knowledge to fully make use of all equations, I managed to learn what I needed.
   - <a href="files/coppock_theory.pdf">coppock_theory.pdf</a>
+  - <a href="files/coppock_model.pdf">coppock_model.pdf</a>
   - <a href="files/coppock_theory.jpg">coppock_theory.jpg</a>
   - <a href="files/coppock_model.jpg">coppock_model.jpg</a>
+  - <a href="files/le_duc_model.jpg">le_duc_model.jpg</a>
+  - <a href="files/powley_formulas.jpg">powley_formulas.jpg</a>
+  - <a href="files/pressure_curve.jpg">pressure_curve.jpg</a>
+  - <a href="files/mccoy_1.jpg">mccoy_1.jpg</a>
+  - <a href="files/mccoy_2.jpg">mccoy_2.jpg</a>
 
 <strong>HERITAGE</strong>
 --------------------------------------------------------------------------------
