--- a/index.html
+++ b/index.html
@@ -94,6 +94,22 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 <strong>201603</strong>
   A system for benchmarking software rendering and integer performance, in order to scale algorithms and settings to performance, inspired by WinSAT.
 
+[FILES]
+
+<strong>(2001)</strong>
+  Some photos from issue 5/2001 of PC Pelaaja, a Finnish gaming magazine I used to read and buy for the demo discs. Diablo, Quake, and Fallout were familiar games, but Gorkamorka I had never heard of, and Venom I got to see long before I ever played and fell in love with STALKER: Shadow of Chernobyl.
+  This might also have been when I became somewhat interested in "AI" for games, trying to make entities work as intended, but I was still far too young to really understand those concepts: it just seemed cool.
+  - [<a href="files/pcpelaaja/diablo.jpg">diablo.jpg</a>]
+  - [<a href="files/pcpelaaja/quake.jpg">quake.jpg</a>]
+  - [<a href="files/pcpelaaja/venom.jpg">venom.jpg</a>]
+  - [<a href="files/pcpelaaja/gorkamorka.jpg">gorkamorka.jpg</a>]
+  - [<a href="files/pcpelaaja/fallout_1.jpg">fallout_1.jpg</a>]
+  - [<a href="files/pcpelaaja/fallout_2.jpg">fallout_2.jpg</a>]
+  - [<a href="files/pcpelaaja/tekoaly_1.jpg">tekoaly_1.jpg</a>]
+  - [<a href="files/pcpelaaja/tekoaly_2.jpg">tekoaly_2.jpg</a>]
+  - [<a href="files/pcpelaaja/tekoaly_3.jpg">tekoaly_3.jpg</a>]
+  - [<a href="files/pcpelaaja/tekoaly_4.jpg">tekoaly_4.jpg</a>]
+
 [NOTES]
 
 <strong>(1991-1992)</strong>
@@ -106,22 +122,6 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
   I have an old hard drive that broke during the second incident around 2010-2011 contains project files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
   Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
   I think it was a Western Digital My Book Essential 1 TB USB 2.0 containing a Samsung hard drive, I don't think I was using Buffalo external drives at that point in time.
-
-[FILES]
-
-<strong>(2001)</strong>
-  Some photos from issue 5/2001 of PC Pelaaja, a Finnish gaming magazine I used to read and buy for the demo discs. Diablo, Quake, and Fallout were familiar games, but Gorkamorka I had never heard of, and Venom I got to see long before I ever played and fell in love with STALKER: Shadow of Chernobyl.
-  This might also have been when I became somewhat interested in "AI" for games, trying to make entities work as intended, but I was still far too young to really understand those concepts: it just seemed cool.
-- <a href="files/pcpelaaja/diablo.jpg">diablo.jpg</a>
-- <a href="files/pcpelaaja/quake.jpg">quake.jpg</a>
-- <a href="files/pcpelaaja/venom.jpg">venom.jpg</a>
-- <a href="files/pcpelaaja/gorkamorka.jpg">gorkamorka.jpg</a>
-- <a href="files/pcpelaaja/fallout_1.jpg">fallout_1.jpg</a>
-- <a href="files/pcpelaaja/fallout_2.jpg">fallout_2.jpg</a>
-- <a href="files/pcpelaaja/tekoaly_1.jpg">tekoaly_1.jpg</a>
-- <a href="files/pcpelaaja/tekoaly_2.jpg">tekoaly_2.jpg</a>
-- <a href="files/pcpelaaja/tekoaly_3.jpg">tekoaly_3.jpg</a>
-- <a href="files/pcpelaaja/tekoaly_4.jpg">tekoaly_4.jpg</a>
 
 <strong>SCIENCE</strong>
 --------------------------------------------------------------------------------
@@ -175,6 +175,8 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 <strong>201201</strong>
    A functional programming language inspired by Lisp.
 
+[FILES]
+
 [NOTES]
 
 <strong>200602</strong>
@@ -184,15 +186,15 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 <strong>200812</strong>
   I stumbled across Steven Faber's web site around 2008 and came to exchange some e-mails with him, wanting to learn ballistics. Before this I had attempted to use rather crude equations that worked as long as you guessed and tweaked the variables correctly, but I was interested in something more accurate.
   He might also have been the one to recommend me McCoy's "bible" on ballistics which I later ended up buying on Amazon. While I lacked, and still lack, the mathematical knowledge to fully make use of all equations, I managed to learn what I needed.
-  - <a href="files/ballistics/coppock_theory.pdf">coppock_theory.pdf</a>
-  - <a href="files/ballistics/coppock_model.pdf">coppock_model.pdf</a>
-  - <a href="files/ballistics/coppock_theory.jpg">coppock_theory.jpg</a>
-  - <a href="files/ballistics/coppock_model.jpg">coppock_model.jpg</a>
-  - <a href="files/ballistics/le_duc_model.jpg">le_duc_model.jpg</a>
-  - <a href="files/ballistics/powley_formulas.jpg">powley_formulas.jpg</a>
-  - <a href="files/ballistics/pressure_curve.jpg">pressure_curve.jpg</a>
-  - <a href="files/ballistics/mccoy_1.jpg">mccoy_1.jpg</a>
-  - <a href="files/ballistics/mccoy_2.jpg">mccoy_2.jpg</a>
+  - [<a href="files/ballistics/coppock_theory.pdf">coppock_theory.pdf</a>]
+  - [<a href="files/ballistics/coppock_model.pdf">coppock_model.pdf</a>]
+  - [<a href="files/ballistics/coppock_theory.jpg">coppock_theory.jpg</a>]
+  - [<a href="files/ballistics/coppock_model.jpg">coppock_model.jpg</a>]
+  - [<a href="files/ballistics/le_duc_model.jpg">le_duc_model.jpg</a>]
+  - [<a href="files/ballistics/powley_formulas.jpg">powley_formulas.jpg</a>]
+  - [<a href="files/ballistics/pressure_curve.jpg">pressure_curve.jpg</a>]
+  - [<a href="files/ballistics/mccoy_1.jpg">mccoy_1.jpg</a>]
+  - [<a href="files/ballistics/mccoy_2.jpg">mccoy_2.jpg</a>]
 <strong>(2010-2011)</strong>
   I have an old hard drive that broke during the second incident around 2010-2011 contains project files from before 2010, IRC logs, Miranda-IM logs, personal comments, and reference material.
   Once recovered it will help me prove even better what I have worked on and when, showing that I am not falsifying anything.
@@ -213,6 +215,8 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
   A private company to provide online services in our native language.
 <strong>201901</strong>
   A classification of all North Germanic languages based on phonological data.
+
+[FILES]
 
 [NOTES]
 
