links and files

--- a/index.html
+++ b/index.html
@@ -110,6 +110,13 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
   - [<a href="files/pcpelaaja/tekoaly_3.jpg">tekoaly_3.jpg</a>]
   - [<a href="files/pcpelaaja/tekoaly_4.jpg">tekoaly_4.jpg</a>]
 
+- [<a href="files/gaming/roleplaying.html">roleplaying.html</a>]
+
+[LINKS]
+
+- [<a href="https://gafferongames.com/">Gaffer on Games</a>]
+- [<a href="https://fabiensanglard.net/quake3/network.php">Quake 3 Source Code Review</a>]
+
 [NOTES]
 
 <strong>(1991-1992)</strong>
@@ -177,6 +184,13 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 
 [FILES]
 
+- [<a href="files/computing/STDMBR.zip">STDMBR.zip</a>]
+
+[LINKS]
+
+- [<a href="http://www.textfiles.com/programming/CARDS/">Bowen's Instruction Summary Cards</a>]
+- [<a href="https://sengpielaudio.com/">Forum für Mikrofonaufnahmetechnik und Tonstudiotechnik</a>]
+
 [NOTES]
 
 <strong>200602</strong>
@@ -217,6 +231,9 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
   A classification of all North Germanic languages based on phonological data.
 
 [FILES]
+
+- [<a href="files/language/lex_iefin.html">lex_iefin.html</a>]
+- [<a href="files/language/Pre-Finnic vocabulary.htm">Pre-Finnic vocabulary.htm</a>]
 
 [NOTES]
 
