--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 [LINKS]
 
 - [<a href="https://gafferongames.com/">Gaffer on Games</a>]
-- [<a href="https://fabiensanglard.net/quake3/network.php">Quake 3 Source Code Review</a>]
+- [<a href="https://fabiensanglard.net/quake3/network.php">Quake 3 Source Code Review: Network Model</a>]
+- [<a href="https://fabiensanglard.net/duke3d/build_engine_internals.php">Duke Nukem 3D: Build Engine Internals</a>]
 
 [NOTES]
 
