--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 [FILES]
 
 - [<a href="files/gaming/roleplaying.html">roleplaying.html</a>]
+- [<a href="files/gaming/OpenGLReference.pdf">OpenGLReference.pdf</a>]
 
 <strong>(2001)</strong>
   Some photos from issue 5/2001 of PC Pelaaja, a Finnish gaming magazine I used to read and buy for the demo discs. Diablo, Quake, and Fallout were familiar games, but Gorkamorka I had never heard of, and Venom I got to see long before I ever played and fell in love with STALKER: Shadow of Chernobyl.
@@ -186,6 +187,9 @@ Not end up on Fortune 500, or whatever it's called, but to support myself; prefe
 [FILES]
 
 - [<a href="files/computing/STDMBR.zip">STDMBR.zip</a>]
+- [<a href="files/computing/verilog_hdl.pdf">verilog_hdl.pdf</a>]
+- [<a href="files/computing/l4-x2-r6.pdf">l4-x2-r6.pdf</a>]
+- [<a href="files/computing/vgabios.pdf">vgabios.pdf</a>]
 
 [LINKS]
 
